<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#072942"
    android:layout_marginTop="60dp"
    tools:context=".PerfilFragment"
    android:padding="16dp">


    <TextView
        android:id="@+id/titulo_Perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_perfil"
        android:textSize="35sp"
        android:fontFamily="sans-serif-black"
        android:textColor="#F9FCF5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/imagen_perfil"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/perfil"
        app:layout_constraintTop_toBottomOf="@id/titulo_Perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />


    <TextView
        android:id="@+id/titulo_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_nombre_user"
        android:textSize="23sp"
        android:fontFamily="sans-serif"
        android:textColor="#F9FCF5"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imagen_perfil"
        app:layout_constraintStart_toStartOf="@id/imagen_perfil"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/nombre_usuario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_al_nombre_user"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textColor="#F9FCF5"
        app:layout_constraintTop_toBottomOf="@id/titulo_nombre"
        app:layout_constraintStart_toStartOf="@id/titulo_nombre"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/titulo_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_correo_user"
        android:textSize="23sp"
        android:fontFamily="sans-serif"
        android:textColor="#F9FCF5"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/nombre_usuario"
        app:layout_constraintStart_toStartOf="@id/imagen_perfil"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/correo_usuario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_al_correo_user"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textColor="#F9FCF5"
        app:layout_constraintTop_toBottomOf="@id/titulo_correo"
        app:layout_constraintStart_toStartOf="@id/titulo_correo"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
