<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adaptador_lista_cama_favoritas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="16dp"
    android:gravity="top"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_gravity="center"
    android:background="@drawable/borde_negro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#072942">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_nombreCam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/titulo_nombre_cam"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/texto_nombreCam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_cam_text_prueba"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/titulo_region"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/texto_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Nombre de region"
                android:textSize="16sp"
                android:textColor="@android:color/white" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
